fabric/support/test/tests/noble_ui/attr_non_empty.rs
#[fabric_support::noble [foo]]
mod foo {
}

fn main() {
}
